# hip-cmake-github-actions

./: CMakeLists.txt  readme.md
.github/workflows/: Manylinux_2_28.yml  Ubuntu.yml
include/: test.hiph
scripts/actions/: install_hip_el8.sh  install_hip_ubuntu.sh
src/: main.hip
